bump up versions of plugin, dependency(selenium from 3.141.59 to 4.5.0), and java(from 8 to 17)